Updates from code review for OLGH19971
Signed-off-by: Joe Grassel <jgrassel@us.ibm.com>